--- a/index.html
+++ b/index.html
@@ -10,15 +10,31 @@
  h3 {
  text-transform: uppercase;
  }
- li {
- overflow: hidden;
- padding: 20px 0;
- border-bottom: 1px solid #eee;
+Figure 12-2. Creation of a new branch
+Chapter 12 Better Project Management: Pull Requests
+164
+ ul {
+ margin: 0;
+ padding: 0;
+ }
+ ul li {
+ cursor: pointer;
+ position: relative;
+ padding: 12px 8px 12px 40px;
+ background: #eee;
+ font-size: 18px;
+ transition: 0.2s;
+ }
+ ul li:nth-child(odd) {
+ background: #f9f9f9;
+ }
+ ul li:hover {
+ background: #ddd;
  }
  </style>
  </head>
  <body>
- <h1>TODO list1</h1>
+ <h1>TODO list</h1>
  <h3>Todo</h3>
  <ul>
  <li>Buy a hat for the bat</li>
@@ -26,8 +42,6 @@
  <li>Bring a box to the fox</li>
  </ul>
  <h3>Done</h3>
-Chapter 10 Beginning Project Management: Issues
-139
  <ul>
  <li>Put the mittens on the kittens</li>
  </ul>
